Routes API it is working
GoogleRoutesAPI is already working.
Problem -> We have to associate index to spots before send the request in order to recover it all later.