@@ -1,16 +1,21 @@
 package com.turismea.service;
 
+import com.turismea.configuration.WebClientLogging;
 import com.turismea.model.dto.placesDTO.Location;
 import com.turismea.model.dto.routesDTO.*;
+import com.turismea.model.entity.CityDistance;
 import com.turismea.model.entity.Spot;
 import com.turismea.security.GoogleAuthService;
+import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.context.annotation.Lazy;
 import org.springframework.stereotype.Service;
 import org.springframework.web.reactive.function.client.WebClient;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 @Service
@@ -18,56 +23,99 @@ public class GoogleRoutesService {
 
     private final WebClient webClient;
     private final SpotService spotService;
+    private final CityService cityService;
+    private final CityDistanceService cityDistanceService;
     private GoogleRouteResponse googleRouteResponse;
 
     @Value("${google.api.key}")
     private String API_KEY;
 
 
-    public GoogleRoutesService(WebClient webClient, GoogleAuthService googleAuthService, SpotService spotService) {
-
+    public GoogleRoutesService(@Qualifier("routesWebClient") WebClient webClient,
+                               GoogleAuthService googleAuthService,
+                               SpotService spotService,
+                               CityService cityService,
+                               @Lazy CityDistanceService cityDistanceService) {
         this.webClient = webClient;
         this.spotService = spotService;
+        this.cityService = cityService;
+        this.cityDistanceService = cityDistanceService;
     }
+
+
 
 
 
     /*
-    * PROBLEMA-> Google no nos devuelve ni el nombre ni las coordenadas de los elementos (origen | destino), por lo que
-    * tenemos que hallar la manera de asignarle un identificador a cada GoogleRouteResponse.
-    *
-    * Esto será necesario luego para poder recuperar esos spots y asignarlos a sus respectivos cityDistances.
-    *
-    * (1) ->  La lista de origenes tiene ids del 0->N, igual que la de destinos, ¿Como lo hacemos?
+    * PROBLEMA -> Ya hace las peticiones a la API, pero no envia los indices ordenados, como lo hacemos?
     * */
 
-    public Flux<GoogleRouteResponse> getDistanceMatrix(List<Spot> spotList){
+    public Mono<Void> getDistanceMatrixSequential(List<Spot> spotList) {
+        return Flux.fromIterable(spotList)
+                .concatMap(originSpot -> { // Process each spot as an origin, sequentially
 
-        //toList -> (JAVA 16+)  return an immutable list however, collect(Collectors.toList()) return an mutable list
-        Flux<WayPoint> fluxListOfSpots = Flux.fromIterable(spotList.stream().map(spot ->
-                new WayPoint(spot.getName(), new LocationWayPoint(new LatLng(spot.getLatitude(), spot.getLongitude())))
-                ).toList());
+                    List<Spot> destinationSpots = spotList.stream()
+                            .filter(dest -> !dest.equals(originSpot)) // Avoid calculating distance to itself
+                            .toList();
 
-        return fluxListOfSpots.flatMap(wayPoint -> {
-                    Flux<WayPoint> wayPoints = spotService.getDestinationSpots(wayPoint, fluxListOfSpots);
+                    if (destinationSpots.isEmpty()) {
+                        return Mono.empty(); // No destinations available
+                    }
 
-                    return wayPoints.collectList().flatMap(destinations  -> {
-                        //Only one element in the list due to google wait a list not an element
-                        List<WayPoint> origin = List.of(wayPoint);
-                        List<WayPoint> destinationList = destinations.stream().toList();
+                    // Create WayPoint objects for the request
+                    List<Waypoint> originWayPoint = List.of(new Waypoint(originSpot.getName(),
+                            new LocationWayPoint(new LatLng(new Coordinates(originSpot.getLatitude(), originSpot.getLongitude())))));
 
-                        RouteRequestDTO routeRequestDTO = new RouteRequestDTO(origin, destinations);
+                    List<Waypoint> destinationWayPoints = destinationSpots.stream()
+                            .map(dest -> new Waypoint(dest.getName(),
+                                    new LocationWayPoint(new LatLng(new Coordinates(dest.getLatitude(), dest.getLongitude())))))
+                            .toList();
 
-                        return webClient.post().uri("/v2:computeRouteMatrix")
-                                .header("Content-Type", "application/json")
-                                .header("X-Goog-Api-Key", API_KEY)
-                                .header("X-Goog-FieldMask", "originIndex,destinationIndex" +
-                                        ",duration,distanceMeters")
-                                .bodyValue(routeRequestDTO)
-                                .retrieve()
-                                .bodyToMono(GoogleRouteResponse.class);
-                    });
-                }
-        );
+                    RouteRequestDTO routeRequestDTO = new RouteRequestDTO(originWayPoint, destinationWayPoints);
+
+                    return webClient.post()
+                            .uri("/distanceMatrix/v2:computeRouteMatrix")
+                            .header("Content-Type", "application/json")
+                            .header("X-Goog-Api-Key", API_KEY)
+                            .header("X-Goog-FieldMask", "originIndex,destinationIndex,distanceMeters,duration")
+                            .bodyValue(routeRequestDTO)
+                            .retrieve()
+                            .bodyToFlux(GoogleRouteResponse.class)
+                            .flatMap(response -> {
+
+                                if (response.getDistanceMeters() == null) {
+                                    System.out.println("⚠️ Warning: No distance or duration for originIndex "
+                                            + response.getOriginIndex() + " and destinationIndex " + response.getDestinationIndex());
+                                    return Mono.empty(); // Ignorar este caso
+                                }
+                                // Find the origin spot using coordinates
+                                Spot actualOriginSpot = spotService.findByLatitudeAndLongitude(
+                                        originWayPoint.get(0).getWaypoint().getLocation().getLatLng().getLatitude(),
+                                        originWayPoint.get(0).getWaypoint().getLocation().getLatLng().getLongitude()
+                                );
+
+                                // Find the destination spot using coordinates
+                                Spot actualDestinationSpot = spotService.findByLatitudeAndLongitude(
+                                        destinationWayPoints.get(response.getDestinationIndex()).getWaypoint().getLocation().getLatLng().getLatitude(),
+                                        destinationWayPoints.get(response.getDestinationIndex()).getWaypoint().getLocation().getLatLng().getLongitude()
+                                );
+
+                                // Create a CityDistance object with the correct spots
+                                CityDistance cityDistance = new CityDistance(
+                                        actualOriginSpot.getCity(),
+                                        actualOriginSpot,
+                                        actualDestinationSpot,
+                                        response.getDistanceMeters(),
+                                        Integer.parseInt(response.getDuration().replace("s", ""))
+                                );
+
+                                // Save the distance using Mono.fromRunnable to ensure execution within the reactive flow
+                                return Mono.fromRunnable(() -> cityDistanceService.save(cityDistance));
+                            })
+                            .then();
+                })
+                .then();
     }
-}
+
+
+    }
